highcontrast: tweak progressbars and fix insensitive state for sliders

--- a/themes/a11y-base.css
+++ b/themes/a11y-base.css
@@ -136,10 +136,8 @@ GtkComboBox .separator {
 }
 
 .progressbar {
-    background-color: @theme_fg_color;
-    border-color: @theme_insensitive_bg;
-    border-style: solid;
-    border-width: 1px;
+    background-color: @theme_highlight_color;
+    border-style: none;
 }
 
 .entry {
@@ -332,6 +330,7 @@ GtkScale.slider:hover {
 
 GtkScale.slider:insensitive {
     background-color: @theme_insensitive_bg;
+    border-color: @theme_insensitive_color;
 }
 
 GtkSwitch.slider {
